crates/compiler/tests/parse_errors/alias_eq.elm
module Main exposing (..)

type alias Foo 
